web/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: origoweb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: origoweb
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
